[gd_scene load_steps=15 format=3 uid="uid://dydvyavc8xl03"]

[ext_resource type="Texture2D" uid="uid://dyk6f54gsp24r" path="res://Images/TestSprites/Bat Enemy/Front_bat.png" id="1_ht0n3"]
[ext_resource type="Script" path="res://Scripts/bat.gd" id="1_n10ms"]
[ext_resource type="Texture2D" uid="uid://cm8knxskqspck" path="res://Images/TestSprites/Bat Enemy/Right_Bat.png" id="2_ffhbf"]
[ext_resource type="Texture2D" uid="uid://3yvb4xd8kgag" path="res://Images/TestSprites/Bat Enemy/Up_Bat.png" id="3_i83ps"]
[ext_resource type="Script" path="res://Scripts/enemy_health.gd" id="5_p6e27"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jw0pd"]
atlas = ExtResource("1_ht0n3")
region = Rect2(0, 0, 98, 107)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvd2n"]
atlas = ExtResource("1_ht0n3")
region = Rect2(98, 0, 98, 107)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri281"]
atlas = ExtResource("2_ffhbf")
region = Rect2(0, 0, 98, 107)

[sub_resource type="AtlasTexture" id="AtlasTexture_qeb5n"]
atlas = ExtResource("2_ffhbf")
region = Rect2(98, 0, 98, 107)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1xiw"]
atlas = ExtResource("3_i83ps")
region = Rect2(0, 0, 98, 107)

[sub_resource type="AtlasTexture" id="AtlasTexture_23lig"]
atlas = ExtResource("3_i83ps")
region = Rect2(98, 0, 98, 107)

[sub_resource type="SpriteFrames" id="SpriteFrames_vj3bo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw0pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvd2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw0pd")
}],
"loop": true,
"name": &"Down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri281")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qeb5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri281")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qeb5n")
}],
"loop": true,
"name": &"Right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1xiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23lig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1xiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23lig")
}],
"loop": true,
"name": &"Up",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hkajo"]
size = Vector2(152, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wgc4h"]
size = Vector2(126, 104)

[node name="Bat" type="CharacterBody2D" groups=["bats", "enemies"]]
z_index = 1
y_sort_enabled = true
scale = Vector2(0.25, 0.25)
script = ExtResource("1_n10ms")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(27.5, 11.25)
scale = Vector2(1.56122, 1.21028)
sprite_frames = SubResource("SpriteFrames_vj3bo")
animation = &"Down"

[node name="Body" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2(28, 20)
shape = SubResource("RectangleShape2D_hkajo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(28, 20)
shape = SubResource("RectangleShape2D_wgc4h")

[node name="Point" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Point"]
position = Vector2(2, -3)
polygon = PackedVector2Array(-56, -53, -56, 56, -231, 5)

[node name="ProjectileCooldown" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Health" type="Node" parent="."]
script = ExtResource("5_p6e27")
max_health = 100

[connection signal="body_entered" from="Body" to="." method="_on_point_body_entered"]
[connection signal="body_entered" from="Body" to="." method="_on_body_body_entered"]
[connection signal="body_exited" from="Body" to="." method="_on_point_body_exited"]
[connection signal="body_entered" from="Point" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Point" to="." method="_on_point_body_entered"]
[connection signal="timeout" from="ProjectileCooldown" to="." method="_on_projectile_cooldown_timeout"]
